--- a/src/pages/estimate/estimate.html
+++ b/src/pages/estimate/estimate.html
@@ -15,214 +15,280 @@
 <ion-content padding>
   <form (submit)="estimateOrder(estimateForm)" #estimateForm="ngForm">
     <!-- <form (ngSubmit)="submitOrder(ordersForm)" #ordersForm="ngForm"> -->
+    <ion-card>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label>Customer</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item>
+            <ion-select [(ngModel)]="customer" name="customer">
+              <ion-option *ngFor="let customer of customers" [value]="customer" (ionSelect)="onSelectCustomer(customer.cust_ID)" required>{{customer.cust_NAME}}</ion-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
 
-    <ion-row>
-      <!-- <ion-col col-4>
-        <ion-item>
-          <ion-label>Customer</ion-label>
-        </ion-item>
-      </ion-col>
-      <ion-col col-8>
-        <ion-item>
-          <ion-select [(ngModel)]="customer" name="customer">
-            <ion-option *ngFor="let customer of customers" [value]="customer" (change)="onChange(customer)" required>{{customer.cust_NAME}}</ion-option>
-          </ion-select>
-        </ion-item>
-      </ion-col> -->
-      <ion-item>
-        <ion-label>Customer</ion-label>
-        <ion-select [(ngModel)]="customer" name="customer">
-          <ion-option *ngFor="let customer of customers" [value]="customer" (change)="onChange(customer)" required>{{customer.cust_NAME}}</ion-option>
-        </ion-select>
-      </ion-item>
-    </ion-row>
+        <!-- <ion-item>
+            <ion-label>Customer</ion-label>
+            <ion-select [(ngModel)]="customer" name="customer" >
+              <ion-option *ngFor="let customer of customers" [value]="customer" (change)="onChange(customer)"  text-left required>{{customer.cust_NAME}}</ion-option>
+            </ion-select>
+          </ion-item> -->
+      </ion-row>
 
-    <ion-row>
-      <ion-col col-4>
-        <ion-item>
-          <ion-label>Site</ion-label>
-        </ion-item>
-      </ion-col>
-      <ion-col col-8>
-        <ion-item>
-          <ion-input [(ngModel)]="customer.site_NAME" name="site_NAME" type="text" required></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
+      <ion-row>
+        <ion-col col-4>
+          <ion-item>
+            <ion-label>Site</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col col-8>
+          <ion-item>
+            <ion-select [(ngModel)]="site" name="site">
+              <ion-option *ngFor="let site of sites" [value]="site" (ionSelect)="onSelectSite(site.site_NAME)" required>{{site.site_NAME}}</ion-option>
+            </ion-select>
+            <!-- <ion-label>{{customer.site_NAME}}</ion-label> -->
+            <!-- <ion-input [(ngModel)]="customer.site_NAME" name="site_NAME" type="text" [disabled]="true" required></ion-input> -->
+          </ion-item>
+        </ion-col>
+      </ion-row>
 
 
-    <ion-row>
-      <ion-col col-4>
-        <ion-item>
-          <ion-label>Referer 1</ion-label>
-        </ion-item>
-      </ion-col>
-      <ion-col col-8>
-        <ion-item>
-          <ion-input [(ngModel)]="customer.reference_ID" name="reference_ID" type="text" required></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
+      <ion-row>
+        <ion-col col-4>
+          <ion-item>
+            <ion-label>Referer 1</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col col-8>
+          <ion-item>
+            <!-- <ion-label>{{customer.reference_ID}}</ion-label> -->
+            <!-- <ion-input [(ngModel)]="customer.reference_ID" name="reference_ID" type="text" [disabled]="true" required></ion-input> -->
+            <ion-select [(ngModel)]="reference1" name="reference1">
+              <ion-option *ngFor="let reference1 of references" [value]="reference1" (ionSelect)="onSelectReference(reference1.refrer_NAME)"
+                required>{{reference1.refrer_NAME}}</ion-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
 
-    <ion-row>
-      <ion-col col-4>
+
+      <ion-row>
+        <ion-col col-4>
+          <ion-item>
+            <ion-label>Referer 2</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col col-8>
+          <ion-item>
+            <!-- <ion-label>{{customer.reference_ID}}</ion-label> -->
+            <!-- <ion-input [(ngModel)]="customer.reference_ID" name="reference_ID" type="text" [disabled]="true" required></ion-input> -->
+            <ion-select [(ngModel)]="reference2" name="reference2">
+              <ion-option *ngFor="let reference2 of references" [value]="reference2" (ionSelect)="onSelectReference(reference2.refrer_NAME)"
+                required>{{reference2.refrer_NAME}}</ion-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-card>
+    <ion-card>
+      <ion-row>
+        <!-- <ion-col col-4> -->
         <ion-item>
           <ion-label>Item Group</ion-label>
-        </ion-item>
-      </ion-col>
-      <ion-col col-8>
-        <ion-item>
-          <ion-select [(ngModel)]="estimate.itemGroup" name="itemGroup">
-            <ion-option *ngFor="let item of items" [value]="item" (ionSelect)="onItemGroupChange(item,item.division_NAME)" required>{{item.division_NAME}}</ion-option>
-            <!-- <ion-option *ngFor="let item of items.productGroups" [value]="item" (change)="onItemGroupChange(item)" required>{{item.product_GROUP_NAME}}</ion-option> -->
-            <!-- <ion-option *ngFor="let customer1 of customers" [value]="customer1" (change)="onItemGroupChange(customer1)" required>{{customer1.cust_NAME}}</ion-option> -->
+          <!-- </ion-item> -->
+          <!-- </ion-col> -->
+          <!-- <ion-col col-8> -->
+          <!-- <ion-item> -->
+          <ion-select [(ngModel)]="estimate.cust_NAME" name="item_Group_NAME">
+            <ion-option *ngFor="let row of productGroupModel" (ionSelect)="onItemGroupChange(row,row.product_GROUP_ID,row.product_GROUP_NAME)"
+              required>{{row.product_GROUP_NAME}}</ion-option>
+
           </ion-select>
         </ion-item>
-      </ion-col>
-    </ion-row>
+        <!-- </ion-col> -->
+      </ion-row>
 
-    <ion-row>
-      <ion-col col-4>
+      <ion-row>
+        <!-- <ion-col col-4> -->
         <ion-item>
           <ion-label>Item name</ion-label>
-        </ion-item>
-      </ion-col>
-      <ion-col col-8>
-        <ion-item>
-          <ion-select name="itemName">
-            <!-- <ion-select [(ngModel)]="estimate.itemName" name="itemName"> -->
-            <ion-option *ngFor="let item1 of items1" [value]="item1" (change)="onItemNameChange(item1)" required>{{item1.division_NAME}}</ion-option>
+          <!-- </ion-item> -->
+          <!-- </ion-col> -->
+          <!-- <ion-col col-8>
+            <ion-item> -->
+          <!-- <ion-select name="itemName"> -->
+          <ion-select [(ngModel)]="estimate.itemName" name="itemName">
+            <ion-option *ngFor="let item of products" [value]="item" (ionSelect)="onItemNameChange(item.productDetails)" required>{{item.product_NAME}}</ion-option>
           </ion-select>
         </ion-item>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-6>
+        <!-- </ion-col> -->
+      </ion-row>
+    </ion-card>
+    <ion-card>
+      <div *ngFor="let item of selectedProduct">
+        {{item.product_DETAIL_NAME}}
+      </div>
+    </ion-card>
+    <ion-card>
+      <ion-row>
+        <!-- <ion-col col-6> -->
         <ion-item>
           <ion-label>Distance</ion-label>
+          <!-- </ion-item> -->
+          <!-- </ion-col>
+          <ion-col col-6> -->
+          <!-- <ion-item> -->
+          <ion-input [(ngModel)]="estimate.distanceKM" name="distanceKM" type="text" placeholder="Enter the distance KM" text-right
+            required></ion-input>
         </ion-item>
-      </ion-col>
-      <ion-col col-6>
-        <ion-item>
-          <ion-input [(ngModel)]="estimate.distanceKM" name="distanceKM" type="text" required></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col col-6>
-        <ion-item>
-          <ion-label>Total Units</ion-label>
-        </ion-item>
-      </ion-col>
-      <ion-col col-6>
-        <ion-item>
-          <ion-input [(ngModel)]="estimate.unitsTotal" name="unitsTotal" type="text" (change)="onChangeTotalUnits()" required></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-
-    <div *ngIf="itemGroup=='Quarry'">
-      <!-- <div *ngIf="itemGroup=='Aggregate'"> -->
-      <ion-row>
-        <ion-col col-6>
-          <div style="font-size:1.6rem;font-weight:bold;text-align: center;">Capacity</div>
-        </ion-col>
-        <ion-col col-6>
-          <div style="font-size:1.6rem;font-weight:bold;text-align:center;">Loads</div>
-        </ion-col>
+        <!-- </ion-col> -->
       </ion-row>
 
       <ion-row>
         <ion-col col-6>
           <ion-item>
-            <ion-label>1 Unit</ion-label>
+            <ion-label>Total Units</ion-label>
           </ion-item>
         </ion-col>
         <ion-col col-6>
           <ion-item>
-            <ion-input [(ngModel)]="estimate.unit1" name="unit1" type="text"></ion-input>
+            <ion-input [(ngModel)]="estimate.unitsTotal" name="unitsTotal" type="text" (change)="onChangeTotalUnits()" placeholder="Enter the Total Units/Qty"
+              required></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
-      <ion-row>
-        <ion-col col-6>
-          <ion-item>
-            <ion-label>2 Units</ion-label>
-          </ion-item>
-        </ion-col>
-        <ion-col col-6>
-          <ion-item>
-            <ion-input [(ngModel)]="estimate.unit2" name="unit2" type="text"></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col col-6>
-          <ion-item>
-            <ion-label>4 Units</ion-label>
-          </ion-item>
-        </ion-col>
-        <ion-col col-6>
-          <ion-item>
-            <ion-input [(ngModel)]="estimate.unit4" name="unit4" type="text"></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col col-6>
-          <ion-item>
-            <ion-label>6 Units</ion-label>
-          </ion-item>
-        </ion-col>
-        <ion-col col-6>
-          <ion-item>
-            <ion-input [(ngModel)]="estimate.unit6" name="unit6" type="text"></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-    </div>
-    <div *ngIf="itemGroup=='HOLLOW BLOCK'">
-      <!-- <div *ngIf="itemGroup=='Aggregate'"> -->
-      <ion-row>
-        <ion-col col-6>
-          <div style="font-size:1.6rem;font-weight:bold;text-align: center;">Quantity</div>
-        </ion-col>
-        <ion-col col-6>
-          <div style="font-size:1.6rem;font-weight:bold;text-align:center;">Loads</div>
-        </ion-col>
-      </ion-row>
+    </ion-card>
+    <ion-card>
+      <div *ngIf="itemGroup=='Quarry'">
+        <!-- <div *ngIf="itemGroup=='Aggregate'"> -->
+        <ion-row>
+          <ion-col col-6>
+            <div style="font-size:1.6rem;font-weight:bold;text-align: center;">Capacity</div>
+          </ion-col>
+          <ion-col col-6>
+            <div style="font-size:1.6rem;font-weight:bold;text-align:center;">Loads</div>
+          </ion-col>
+        </ion-row>
 
-      <ion-row>
-        <ion-col col-6>
-          <ion-item>
-            <ion-label>700 Units</ion-label>
-          </ion-item>
-        </ion-col>
-        <ion-col col-6>
-          <ion-item>
-            <ion-label>{{estimate.fullLoads}}</ion-label>
-            <!-- <ion-input [(ngModel)]="estimate.fullLoads" name="fullLoads" type="text"></ion-input> -->
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      <div *ngIf="partialLoadOption==true">
         <ion-row>
           <ion-col col-6>
             <ion-item>
-              <ion-label>{{estimate.partialLoad}} Units</ion-label>
+              <ion-label>1 Unit</ion-label>
             </ion-item>
           </ion-col>
           <ion-col col-6>
             <ion-item>
-              <ion-label>1</ion-label>
-              <!-- <ion-input [(ngModel)]="estimate.partialLoad" name="partialLoad" type="text"></ion-input> -->
+              <ion-input [(ngModel)]="estimate.unit1" name="unit1" type="text"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-6>
+            <ion-item>
+              <ion-label>2 Units</ion-label>
+            </ion-item>
+          </ion-col>
+          <ion-col col-6>
+            <ion-item>
+              <ion-input [(ngModel)]="estimate.unit2" name="unit2" type="text"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-6>
+            <ion-item>
+              <ion-label>4 Units</ion-label>
+            </ion-item>
+          </ion-col>
+          <ion-col col-6>
+            <ion-item>
+              <ion-input [(ngModel)]="estimate.unit4" name="unit4" type="text"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-6>
+            <ion-item>
+              <ion-label>6 Units</ion-label>
+            </ion-item>
+          </ion-col>
+          <ion-col col-6>
+            <ion-item>
+              <ion-input [(ngModel)]="estimate.unit6" name="unit6" type="text"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
       </div>
-    </div>
+    </ion-card>
+    <ion-card>
+      <div *ngIf="itemGroup=='HOLLOW BLOCK'">
+        <!-- <div *ngIf="itemGroup=='Aggregate'"> -->
+        <ion-row>
+          <ion-col col-6>
+            <div style="font-size:1.6rem;font-weight:bold;text-align: center;">Quantity</div>
+          </ion-col>
+          <ion-col col-6>
+            <div style="font-size:1.6rem;font-weight:bold;text-align:center;">Loads</div>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col col-6>
+            <ion-item>
+              <ion-label>700 Units</ion-label>
+            </ion-item>
+          </ion-col>
+          <ion-col col-6>
+            <ion-item>
+              <ion-label>{{estimate.fullLoads}}</ion-label>
+              <!-- <ion-input [(ngModel)]="estimate.fullLoads" name="fullLoads" type="text"></ion-input> -->
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <div *ngIf="partialLoadOption==true">
+          <ion-row>
+            <ion-col col-6>
+              <ion-item>
+                <ion-label>{{estimate.partialLoad}} Units</ion-label>
+              </ion-item>
+            </ion-col>
+            <ion-col col-6>
+              <ion-item>
+                <ion-label>1</ion-label>
+                <!-- <ion-input [(ngModel)]="estimate.partialLoad" name="partialLoad" type="text"></ion-input> -->
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        </div>
+      </div>
+    </ion-card>
+    <ion-card>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label>Transport Cost: </ion-label>
+            <ion-label>7000</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>Loading Cost: </ion-label>
+            <ion-label>700</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>Tax: </ion-label>
+            <ion-label>1700</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>Total Cost : </ion-label>
+            <ion-label>17000</ion-label>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+
+    </ion-card>
     <button ion-button block type="submit" [color]="'head'" [disabled]="!estimateForm.valid">
       Submit
     </button>
