--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('service worker installed'))
+        .then(() => //console.log('service worker installed'))
         .catch(err => console.error('Error', err));
     }
   </script>-->
