--- a/src/pages/estimate/estimate.html
+++ b/src/pages/estimate/estimate.html
@@ -7,7 +7,8 @@
     </ion-buttons>
     <ion-title center>Estimate</ion-title>
     <ion-buttons right>
-      <img alt="logo" height="40" src="assets/imgs/{{companyId}}.png">
+      <img alt="logo" height="40" src="assets/imgs/srk-0.png">
+      <!-- <img alt="logo" height="40" src="assets/imgs/{{companyId}}.png"> -->
     </ion-buttons>
   </ion-navbar>
 </ion-header>
@@ -182,7 +183,7 @@
 
 
     <ion-card>
-      <div *ngIf="itemGroup=='Quarry'">
+      <div *ngIf="itemGroup=='QUARRY'">
         <!-- <div *ngIf="itemGroup=='Aggregate'"> -->
         <ion-row>
           <ion-col col-6>
