--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
     </ion-buttons>
     <ion-title center>Dashboard</ion-title>
     <ion-buttons right>
-      <img alt="logo" height="40" src="assets/imgs/logo.jpg">
+      <img alt="logo" height="40" src="assets/imgs/srk-0.png">
       <!-- <img alt="logo" height="40" src="assets/imgs/{{companyId}}.png"> -->
     </ion-buttons>
   </ion-navbar>
